--- a/index.html
+++ b/index.html
@@ -474,11 +474,7 @@
 			<div class="row d-flex no-gutters">
 				<div class="col-md-6 d-flex order-md-last">
 					<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center mb-4 mb-sm-0"
-						style="background-image:url(images/about.jpg);">
-						<a href="https://vimeo.com/45830194"
-							class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-							<span class="fa fa-play"></span>
-						</a>
+						style="background-image:url(images/a.png);">
 					</div>
 				</div>
 				<div class="col-md-6 pr-md-5 py-md-5">
